feat(accordion): faq, implementation of icon change when opening accordion, js logic is written, when clicking on the card

--- a/menu.html
+++ b/menu.html
@@ -253,7 +253,7 @@
         </div>
         <ul class="top-restaurants__list">
           <li class="top-restaurants__item">
-            <div class="top-restaurants__card">
+            <div class="top-restaurants__card" data-js-top-restaurants-card data-product-url="./index.html">
               <img
                 class="top-restaurants__card-image"
                 src="./images/top-restaurants/burger.png"
@@ -275,7 +275,7 @@
             </div>
           </li>
           <li class="top-restaurants__item">
-            <div class="top-restaurants__card">
+            <div class="top-restaurants__card" data-js-top-restaurants-card data-product-url="./index.html">
               <img
                 class="top-restaurants__card-image"
                 src="./images/top-restaurants/chicken.png"
@@ -296,7 +296,7 @@
             </div>
           </li>
           <li class="top-restaurants__item">
-            <div class="top-restaurants__card">
+            <div class="top-restaurants__card" data-js-top-restaurants-card data-product-url="./index.html">
               <img
                 class="top-restaurants__card-image"
                 src="./images/top-restaurants/burger.png"
@@ -340,7 +340,7 @@
         </div>
         <ul class="top-restaurants__list">
           <li class="top-restaurants__item">
-            <div class="top-restaurants__card">
+            <div class="top-restaurants__card" data-js-top-restaurants-card data-product-url="./index.html">
               <img
                 class="top-restaurants__card-image"
                 src="./images/top-restaurants/chicken.png"
@@ -361,7 +361,7 @@
             </div>
           </li>
           <li class="top-restaurants__item">
-            <div class="top-restaurants__card">
+            <div class="top-restaurants__card" data-js-top-restaurants-card data-product-url="./index.html">
               <img
                 class="top-restaurants__card-image"
                 src="./images/top-restaurants/burger.png"
@@ -383,7 +383,7 @@
             </div>
           </li>
           <li class="top-restaurants__item">
-            <div class="top-restaurants__card">
+            <div class="top-restaurants__card" data-js-top-restaurants-card data-product-url="./index.html">
               <img
                 class="top-restaurants__card-image"
                 src="./images/top-restaurants/chicken.png"
@@ -618,6 +618,123 @@
     </div>
   </section>
 
+
+  <section class="faq" aria-labelledby="faq__title">
+    <div class="faq__body container">
+      <h2 class="faq__title" id="faq__title">Frequently&nbsp;Asked <span class="overall-top__highlight">Questions</span></h2>
+      <div class="faq__body-inner">
+        <div class="accordion-group">
+          <div class="accordion">
+            <details class="accordion__details" name="faq">
+              <summary class="accordion__summary">
+                <h3 class="accordion__title h5">
+                  <span role="term" aria-details="faq-1">How long does delivery take?</span>
+                </h3>
+              </summary>
+            </details>
+            <div
+            class="accordion__content"
+            id="faq-1"
+            role="definition"
+            >
+            <div class="accordion__content-inner">
+              <div class="accordion__content-body">
+                <p>You Can Get Information By Contacting Our Support Team Have 24/7 Service. What's The Difference Between Free And Paid Plan ?</p>
+              </div>
+            </div>
+          </div>
+          </div>
+
+          <div class="accordion">
+            <details class="accordion__details" name="faq">
+              <summary class="accordion__summary">
+                <h3 class="accordion__title h5">
+                  <span role="term" aria-details="faq-2">How Does It Work ?</span>
+                </h3>
+              </summary>
+            </details>
+            <div
+            class="accordion__content"
+            id="faq-2"
+            role="definition"
+            >
+            <div class="accordion__content-inner">
+              <div class="accordion__content-body">
+                <p>Our service is simple! Just place your order online, choose your preferred delivery time, and our team will handle the rest. You'll receive updates on your order status until it arrives at your doorstep.
+                </p>
+              </div>
+            </div>
+          </div>
+          </div>
+
+          <div class="accordion">
+            <details class="accordion__details" name="faq">
+              <summary class="accordion__summary">
+                <h3 class="accordion__title h5">
+                  <span role="term" aria-details="faq-3">How does your food delivery service work?</span>
+                </h3>
+              </summary>
+            </details>
+            <div
+            class="accordion__content"
+            id="faq-3"
+            role="definition"
+            >
+            <div class="accordion__content-inner">
+              <div class="accordion__content-body">
+                <p>You can browse restaurants, select your meals, and place an order through our app or website. After checkout, the restaurant prepares your food, and our courier delivers it to you as quickly as possible.
+                </p>
+              </div>
+            </div>
+          </div>
+          </div>
+
+          <div class="accordion">
+            <details class="accordion__details" name="faq">
+              <summary class="accordion__summary">
+                <h3 class="accordion__title h5">
+                  <span role="term" aria-details="faq-4">What payment options do you accept?</span>
+                </h3>
+              </summary>
+            </details>
+            <div
+            class="accordion__content"
+            id="faq-4"
+            role="definition"
+            >
+            <div class="accordion__content-inner">
+              <div class="accordion__content-body">
+                <p>We accept various payment methods, including credit/debit cards, digital wallets (like Apple Pay, Google Pay), and cash on delivery in select areas.
+                </p>
+              </div>
+            </div>
+          </div>
+          </div>
+
+          <div class="accordion">
+            <details class="accordion__details" name="faq">
+              <summary class="accordion__summary">
+                <h3 class="accordion__title h5">
+                  <span role="term" aria-details="faq-5">Do you offer discounts or promotions?</span>
+                </h3>
+              </summary>
+            </details>
+            <div
+            class="accordion__content"
+            id="faq-5"
+            role="definition"
+            >
+            <div class="accordion__content-inner">
+              <div class="accordion__content-body">
+                <p>Yes! We regularly run special offers, promo codes, and loyalty discounts. Check our app, website, or social media for the latest deals.</p>
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   </main>
 
