--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             class="overall-top__highlight">Restaurants</span></h2>
         <ul class="top-restaurants__list">
           <li class="top-restaurants__item">
-            <div class="top-restaurants__card">
+            <div class="top-restaurants__card" data-js-top-restaurants-card data-product-url="./index.html">
               <img
                 class="top-restaurants__card-image"
                 src="./images/top-restaurants/chicken.png"
@@ -424,7 +424,7 @@
             </div>
           </li>
           <li class="top-restaurants__item">
-            <div class="top-restaurants__card">
+            <div class="top-restaurants__card" data-js-top-restaurants-card data-product-url="./index.html">
               <img
                 class="top-restaurants__card-image"
                 src="./images/top-restaurants/burger.png"
@@ -446,7 +446,7 @@
             </div>
           </li>
           <li class="top-restaurants__item">
-            <div class="top-restaurants__card">
+            <div class="top-restaurants__card" data-js-top-restaurants-card data-product-url="./index.html">
               <img
                 class="top-restaurants__card-image"
                 src="./images/top-restaurants/chicken.png"
