--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="header__nav-link" href="/">Blog</a>
               </li>
               <li class="header__nav-item">
-                <a class="header__nav-link" href="/">Pricing</a>
+                <a class="header__nav-link" href="/pricing.html">Pricing</a>
               </li>
               <li class="header__nav-item">
                 <a class="header__nav-link" href="/">Contact</a>
@@ -1155,7 +1155,7 @@
             <a href="/" class="footer__link">Blog</a>
           </li>
           <li class="footer__item">
-            <a href="/" class="footer__link">Pricing</a>
+            <a href="/pricing.html" class="footer__link">Pricing</a>
           </li>
           <li class="footer__item">
             <a href="/" class="footer__link">About Us</a>
