--- a/chicken-detail.html
+++ b/chicken-detail.html
@@ -29,7 +29,7 @@
                 <a class="header__nav-link" href="/menu.html">Menu</a>
               </li>
               <li class="header__nav-item">
-                <a class="header__nav-link" href="/">Blog</a>
+                <a class="header__nav-link" href="/blog.html">Blog</a>
               </li>
               <li class="header__nav-item">
                 <a class="header__nav-link" href="/pricing.html">Pricing</a>
@@ -579,7 +579,7 @@
       <nav class="footer__navigation">
         <ul class="footer__list">
           <li class="footer__item">
-            <a href="/" class="footer__link">Blog</a>
+            <a href="/blog.html" class="footer__link">Blog</a>
           </li>
           <li class="footer__item">
             <a href="/pricing.html" class="footer__link">Pricing</a>
