feat(contact): the form has been implemented, and the input fields are validated and throw a message depending on the type of error

--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,8 @@
                 <a class="header__nav-link" href="/pricing.html">Pricing</a>
               </li>
               <li class="header__nav-item">
-                <a class="header__nav-link" href="/">Contact</a>
+                               <a class="header__nav-link" href="/contact.html">Contact</a>
+
               </li>
               <li class="header__nav-item">
                 <a href="/basket.html" class="header__nav-link header__nav-link-basket " aria-label="Перейти в корзину">
@@ -831,7 +832,7 @@
             <a href="/" class="footer__link">About Us</a>
           </li>
           <li class="footer__item">
-            <a href="/" class="footer__link">Contact</a>
+            <a href="/contact.html" class="footer__link">Contact</a>
           </li>
         </ul>
       </nav>
