feat(register): smooth switching between registration windows as well as field validation

--- a/basket.html
+++ b/basket.html
@@ -46,8 +46,8 @@
             </ul>
           </nav>
           <div class="header__authorization">
-            <a class="header__authorization-login" href="/">Login</a>
-            <a class="header__authorization-sign-up button" href="/">Sign up</a>
+            <a class="header__authorization-login" href="/register.html" data-js-login-btn>Login</a>
+            <a class="header__authorization-sign-up button" href="/register.html" data-js-sign-up-btn>Sign up</a>
           </div>
         </div>
         <button
