--- a/menu.html
+++ b/menu.html
@@ -35,8 +35,7 @@
                 <a class="header__nav-link" href="/pricing.html">Pricing</a>
               </li>
               <li class="header__nav-item">
-                               <a class="header__nav-link" href="/contact.html">Contact</a>
-
+                <a class="header__nav-link" href="/contact.html">Contact</a>
               </li>
               <li class="header__nav-item">
                 <a href="/basket.html" class="header__nav-link header__nav-link-basket " aria-label="Перейти в корзину">
@@ -46,8 +45,8 @@
             </ul>
           </nav>
           <div class="header__authorization">
-            <a class="header__authorization-login" href="/">Login</a>
-            <a class="header__authorization-sign-up button" href="/">Sign up</a>
+            <a class="header__authorization-login" href="/register.html" data-js-login-btn>Login</a>
+            <a class="header__authorization-sign-up button" href="/register.html" data-js-sign-up-btn>Sign up</a>
           </div>
         </div>
         <button
