--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
 
     <div class="register__body" aria-labelledby="register__title">
       <div class="register__body-inner">
-        <header class="register__header header">
+        <header class="register__header header" data-js-header>
           <div class="header__body-inner header__body-inner-register hidden-mobile">
             <a class="header__logo logo"
               href="/index.html"
